start and restar function added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="juvee"></div>
     <div id="obstacle"></div>
   </div>
+  <div id="start">
+    <button id="startGameButton">Start Game</button>
+  </div>
   <script src="script.js"></script>
 </body>
 
