added can selection

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div id="start">
     <button id="startGameButton">Start Game</button>
   </div>
+  <div id="canSelection"></div>
   <script src="script.js"></script>
 </body>
 
